Bug 157686 - UI freezes after setting new master password
Summary: UI freezes after setting new master password
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.6.0.3 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0 target:7.6.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2023-10-10 15:26 UTC by Gabor Kelemen (Collabora)
Modified: 2023-10-12 10:52 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
UI is frozen after setting master password (70.73 KB, image/png)
2023-10-10 15:26 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-10-10 15:26:03 UTC
Created attachment 190117 [details]
UI is frozen after setting master password

When setting master password in a new profile, LO freezes.

1. Open Tools - Options, go to Security
2. Check "Persistently save passwords for web connections"
3. The Set Master Password dialog appears
4. Set some password, OK
-> UI is now frozen

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9f44f9fad759dea644356b67b9cd0fab030e8b77
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded

Seems to have started in 7.6 with:

https://git.libreoffice.org/core/+/49dd32a88d90097a1c50dc64dc42dc35645780b8

author	Noel Grandin <noel.grandin@collabora.co.uk>	Fri Feb 17 11:28:17 2023 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	Fri Feb 17 16:03:40 2023 +0000
tree 309586b4ff736e5040a41724a0de6ea388a87fe1
parent 25b38765d6e500af196ce312a3e1d819c6a7d09c [diff]

osl::Mutex->std::mutex in PasswordContainer

Adding CC to: Noel Grandin
Comment 1 m_a_riosv 2023-10-10 23:35:01 UTC
For me LibreOffice crash
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9eb419b0b0f019f5fbc48ff1a11977e8b041edee
CPU threads: 16; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded Jumbo
Comment 2 Commit Notification 2023-10-11 14:43:21 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a004e53527f541a36e7d1934dd99ea01f455faa4

tdf#157686 UI freezes after setting new master password

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2023-10-12 10:52:25 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/59645302addf6bf54d60c9677dfc5d87ddda00a9

tdf#157686 UI freezes after setting new master password

It will be available in 7.6.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.