tdf#157686 UI freezes after setting new master password

regression from
    commit 49dd32a88d90097a1c50dc64dc42dc35645780b8
    author Noel Grandin <noel.grandin@collabora.co.uk>
    osl::Mutex->std::mutex in PasswordContainer

Change-Id: Ie6270f6ed47ee892181f7b9e51ed8ef75533f4e6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157809
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>